test/fail/issue-3585a.mo
import R = "issue-3585/Record";

actor {
}
